# artistRecommender

./: .gitignore  Procfile  pyproject.toml  requirements.txt  server.py
client/src/: App.js
flask-server/: .env  requirements.txt  server.py
flask-server/venv-flask-server/: pyvenv.cfg
flask-server/venv-flask-server/Scripts/: activate
musiccollaborativefiltering/: __init__.py  data.py  recommender.py
venv-flask-server/Scripts/: activate.bat
