[tool.poetry]
name = "musiccollaborativefiltering"
version = "0.1.0"
description = ""
authors = ["Valerio Velardo <velardovalerio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.5.2"
implicit = "^0.6.2"
black = "^22.1.0"
flask = "^2.3.2"
flask-cors = "^3.0.10"

[tool.black]
line-length = 79
exclude = '''
/(
	\.git
| _build
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
